--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,27 @@
   background-color: rgb(126, 120, 120);
 }
 
-.shrink {
+img {
   width: 100px;
   height: auto;
+}
+
+.north {
+  transform: rotate(-90deg);
+  transition: transform 0.5s;
+}
+
+.south {
+  transform: rotate(90deg);
+  transition: transform 0.5s;
+}
+
+.east {
+  transform: rotate(0deg);
+  transition: transform 0.5s;
+}
+
+.west {
+  transform: rotate(180deg);
+  transition: transform 0.5s;
 }
